--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+SimpleLogs4Net.Tests/
 
 # Mono auto generated files
 mono_crash.*
