--- a/SimpleLogs4Net/SimpleLogs4Net.csproj
+++ b/SimpleLogs4Net/SimpleLogs4Net.csproj
@@ -6,9 +6,9 @@
     <Authors>4UPanElektryk</Authors>
     <RepositoryUrl>https://github.com/4UPanElektryk/SimpleLogs4Net</RepositoryUrl>
     <PackageTags>Logger;Log;SimpleLogger;SimpleLog;Logs;SimpleLogs;</PackageTags>
-    <PackageReleaseNotes>Relesed Logs4Net</PackageReleaseNotes>
+    <PackageReleaseNotes>Added Console Output Stream</PackageReleaseNotes>
     <NeutralLanguage>en-GB</NeutralLanguage>
-    <Version>1.1</Version>
+    <Version>2.0</Version>
     <PackageProjectUrl>https://4upanelektryk.github.io/SimpleLogs4Net/</PackageProjectUrl>
   </PropertyGroup>
 
