--- a/SimpleLogs4Net/SimpleLogs4Net.csproj
+++ b/SimpleLogs4Net/SimpleLogs4Net.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -8,7 +8,7 @@
     <PackageTags>Logger;Log;SimpleLogger;SimpleLog;Logs;SimpleLogs;</PackageTags>
     <PackageReleaseNotes>Added Console Output Stream</PackageReleaseNotes>
     <NeutralLanguage>en-GB</NeutralLanguage>
-    <Version>3.2</Version>
+    <Version>3.3</Version>
     <PackageProjectUrl>https://4upanelektryk.github.io/SimpleLogs4Net/</PackageProjectUrl>
   </PropertyGroup>
 
